--- a/app/src/main/res/values/login.xml
+++ b/app/src/main/res/values/login.xml
@@ -9,4 +9,5 @@
     <string name="login">Login</string>
     <string name="register">or Sign Up</string>
     <string name="logout">Logout</string>
+    <string name="logout_message">User Logged Out</string>
 </resources>
