--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".view.homeView.HomeActivity" app:layoutDescription="@xml/activity_home_scene"
+        tools:context=".view.home.HomeActivity" app:layoutDescription="@xml/activity_home_scene"
 >
     <androidx.fragment.app.FragmentContainerView
             android:layout_width="match_parent"
