--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -4,7 +4,7 @@
                                                    xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".view.homeView.UserFragment">
+             tools:context=".view.home.UserFragment">
 
     <Button
             android:id="@+id/fragment_logout_button"
