--- a/app/src/main/res/navigation/home_nav_graph.xml
+++ b/app/src/main/res/navigation/home_nav_graph.xml
@@ -4,17 +4,17 @@
             xmlns:tools="http://schemas.android.com/tools" android:id="@+id/home_nav_graph"
             app:startDestination="@id/nav_home">
 
-    <activity android:id="@+id/homeActivity" android:name="com.andorid.fudbox.view.home.HomeActivity"
+    <activity android:id="@+id/homeActivity" android:name="com.andorid.fudbox.view.mainscreen.MainScreenActivity"
               android:label="activity_home" tools:layout="@layout/activity_home"/>
 
-    <fragment android:id="@+id/nav_home" android:name="com.andorid.fudbox.view.home.MainFragment"
+    <fragment android:id="@+id/nav_home" android:name="com.andorid.fudbox.view.mainscreen.home.HomeFragment"
               android:label="fragment_main" tools:layout="@layout/fragment_main"/>
 
     <fragment android:id="@+id/loginRegisterFragment"
               android:name="com.andorid.fudbox.view.authentication.LoginRegisterFragment"
               android:label="fragment_loginregister" tools:layout="@layout/fragment_loginregister"/>
 
-    <fragment android:id="@+id/nav_user" android:name="com.andorid.fudbox.view.home.UserFragment"
+    <fragment android:id="@+id/nav_user" android:name="com.andorid.fudbox.view.mainscreen.user.UserFragment"
               android:label="fragment_user" tools:layout="@layout/fragment_user">
     </fragment>
 
