--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="spacing_xlarge">8dp</dimen>
+    <dimen name="spacing_large">4dp</dimen>
+    <dimen name="spacing_small">2dp</dimen>
 </resources>
