--- a/app/src/main/res/layout/activity_place.xml
+++ b/app/src/main/res/layout/activity_place.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,87 +14,79 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
+        <ImageView
+            android:src="@drawable/logo"
+            android:id="@+id/logo"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="8dp"
+            android:cropToPadding="true" android:allowClickWhenDisabled="false" android:adjustViewBounds="false"
+            android:layout_width="385dp"
+            android:layout_height="204dp"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/inputLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="8dp"
+            android:hint="@string/autocomplete_address1_label">
+
+            <com.andorid.fudbox.model.place.AutocompleteEditText
+                android:id="@+id/autocomplete_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints=""
+                android:imeOptions="actionNext"
+                android:inputType="text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/geolocalize_button"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/autocomplete_address1_label"/>
+            android:text="@string/geolocalization" />
 
-        <com.andorid.fudbox.model.place.AutocompleteEditText
-            android:id="@+id/autocomplete_address1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints=""
-            android:hint="@string/autocomplete_address1_label"
-            android:imeOptions="actionNext"
-            android:inputType="text"/>
-
-        <TextView
+        <Button
+            android:id="@+id/autocomplete_save_button"
+            style="@style/Widget.MaterialComponents.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/autocomplete_address2_label"/>
-
-        <EditText
-            android:id="@+id/autocomplete_address2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints=""
-            android:hint="@string/autocomplete_address2_label"
-            android:imeOptions="actionNext"
-            android:inputType="text"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:baselineAligned="false">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/autocomplete_save_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/autocomplete_save_button"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <CheckBox android:id="@+id/checkbox_proximity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/autocomplete_proximity_check"/>
-
-            </LinearLayout>
-        </LinearLayout>
+            android:layout_gravity="bottom|center"
+            android:layout_marginTop="16dp"
+            android:text="@string/autocomplete_save_button" />
 
         <!-- The map for visual confirmation of the selected address -->
         <!-- Stub to only load the map after Autocomplete prediction selection -->
-        <ViewStub
-            android:id="@+id/stub_map"
-            android:inflatedId="@+id/panel_map"
-            android:layout="@layout/autocomplete_address_map"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:layout_gravity="bottom" />
-
-
-        <!-- Reset button provided for development testing convenience. Not recommended for user-facing
-        forms due to risk of mis-click when aiming for Submit button. -->
-        <Button
-            android:id="@+id/autocomplete_reset_button"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:text="@string/autocomplete_reset_button"/>
+            android:layout_margin="16dp"
+            android:visibility="gone"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="8dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp">
+
+                <ViewStub
+                    android:id="@+id/stub_map"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:layout_marginTop="8dp"
+                    android:inflatedId="@+id/panel_map"
+                    android:layout="@layout/autocomplete_address_map" />
+
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
     </LinearLayout>
 </ScrollView>
 
