--- a/app/src/main/res/navigation/home_nav_graph.xml
+++ b/app/src/main/res/navigation/home_nav_graph.xml
@@ -8,7 +8,8 @@
               android:label="activity_home" tools:layout="@layout/activity_home"/>
 
     <fragment android:id="@+id/nav_home" android:name="com.andorid.fudbox.view.mainscreen.home.HomeFragment"
-              android:label="fragment_main" tools:layout="@layout/fragment_main"/>
+              android:label="fragment_main" tools:layout="@layout/item_restaurant">
+    </fragment>
 
     <fragment android:id="@+id/loginRegisterFragment"
               android:name="com.andorid.fudbox.view.authentication.LoginRegisterFragment"
