Fixed some errors, added view and layout to show menu on click of restaurant

--- a/app/src/main/res/navigation/home_nav_graph.xml
+++ b/app/src/main/res/navigation/home_nav_graph.xml
@@ -19,6 +19,13 @@
               android:label="fragment_user" tools:layout="@layout/fragment_user">
     </fragment>
 
+    <fragment android:id="@+id/menuFragment" android:name="com.andorid.fudbox.view.mainscreen.home.menu.MenuFragment"
+        android:label="fragment_menu" tools:layout="@layout/fragment_menu"/>
+
+    <action
+        android:id="@+id/action_restaurantFragment_to_menuFragment"
+        app:destination="@id/menuFragment" />
+
 
 
 </navigation>
