--- a/app/src/main/res/values/menu.xml
+++ b/app/src/main/res/values/menu.xml
@@ -3,4 +3,5 @@
     <string name="add_to_cart">Add to Cart</string>
     <string name="price">Price: </string>
     <string name="menu">Menu</string>
+    <string name="euro">€ </string>
 </resources>
