Implemented Order System. Now is possible to add to cart item from a restaurant and found it on order Fragment.

--- a/app/src/main/res/navigation/home_nav_graph.xml
+++ b/app/src/main/res/navigation/home_nav_graph.xml
@@ -22,6 +22,9 @@
     <fragment android:id="@+id/menuFragment" android:name="com.andorid.fudbox.view.mainscreen.home.menu.MenuFragment"
         android:label="fragment_menu" tools:layout="@layout/fragment_menu"/>
 
+    <fragment android:id="@+id/nav_order" android:name="com.andorid.fudbox.view.mainscreen.order.OrderFragment"
+        android:label="fragment_order" tools:layout="@layout/fragment_order"/>
+
     <action
         android:id="@+id/action_restaurantFragment_to_menuFragment"
         app:destination="@id/menuFragment" />
