--- a/app/src/main/res/navigation/home_nav_graph.xml
+++ b/app/src/main/res/navigation/home_nav_graph.xml
@@ -15,7 +15,8 @@
     </fragment>
 
     <fragment android:id="@+id/menuFragment" android:name="com.andorid.fudbox.view.mainscreen.home.menu.MenuFragment"
-        android:label="fragment_menu" tools:layout="@layout/fragment_menu"/>
+        android:label="fragment_menu" tools:layout="@layout/fragment_menu">
+    </fragment>
 
     <fragment android:id="@+id/loginRegisterFragment"
               android:name="com.andorid.fudbox.view.authentication.LoginRegisterFragment"
