--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -7,30 +7,83 @@
              tools:context=".view.mainscreen.user.UserFragment">
 
     <Button
-            android:id="@+id/fragment_logout_button"
-            android:layout_width="203dp"
-            android:layout_height="57dp"
-            android:text="@string/logout"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="104dp"
-            android:layout_marginEnd="104dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="96dp"
-            app:layout_constraintHorizontal_bias="0.0"/>
+        android:id="@+id/fragment_logout_button"
+        android:layout_width="203dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="96dp"
+        android:text="@string/logout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
-            android:layout_width="233dp"
-            android:layout_height="30dp" android:id="@+id/fragment_loggedin_user"
-            android:layout_marginBottom="312dp"
-            app:layout_constraintBottom_toTopOf="@+id/fragment_logout_button"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="92dp"
-            android:layout_marginEnd="92dp" app:layout_constraintEnd_toEndOf="parent"
-            android:textAlignment="center" android:textSize="20sp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="#FFA726"/>
+        android:id="@+id/fragment_loggedin_user"
+        android:layout_width="233dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginEnd="92dp"
+        android:layout_marginBottom="312dp"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#FFA726"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_logout_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
     <ImageView
-            android:src="@drawable/user"
-            android:layout_width="257dp"
-            android:layout_height="196dp" android:id="@+id/imageView3"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="77dp" android:layout_marginEnd="77dp"
-            app:layout_constraintEnd_toEndOf="parent"
-    />
+        android:id="@+id/imageView3"
+        android:layout_width="174dp"
+        android:layout_height="137dp"
+        android:layout_marginStart="77dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="77dp"
+        android:src="@drawable/user"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <Button
+        android:id="@+id/recent_orders_button"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:drawableEnd="@drawable/right"
+        android:text="@string/recent_order"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="wrap"
+        app:layout_constraintHeight_min="0dp"
+        app:layout_constraintHeight_percent="0.0"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_loggedin_user"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <Button
+        android:id="@+id/user_info_button"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:drawableEnd="@drawable/right"
+        android:text="@string/user_info"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="wrap"
+        app:layout_constraintHeight_min="0dp"
+        app:layout_constraintHeight_percent="0.0"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recent_orders_button" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
