--- a/app/src/main/res/layout/fragment_recent_orders.xml
+++ b/app/src/main/res/layout/fragment_recent_orders.xml
@@ -17,6 +17,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/item_recent_order" />
+        tools:listitem="@layout/item_recent_order"
+        android:paddingBottom="?actionBarSize" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
