--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -58,13 +58,15 @@
         android:text="@string/recent_order"
         android:textAllCaps="false"
         android:textColor="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_logout_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constrainedHeight="true"
+        app:layout_constraintHeight_default="wrap"
         app:layout_constraintHeight_min="0dp"
         app:layout_constraintHeight_percent="0.0"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_loggedin_user"
+        app:layout_constraintVertical_bias="0.113"
         app:layout_constraintVertical_chainStyle="packed" />
 
 
