--- a/app/src/main/res/layout/fragment_recent_orders.xml
+++ b/app/src/main/res/layout/fragment_recent_orders.xml
@@ -20,4 +20,16 @@
         tools:listitem="@layout/item_recent_order"
         android:paddingBottom="?actionBarSize" />
 
+    <!-- Progress Bar in the center -->
+    <ProgressBar
+        android:id="@+id/loadingProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
