--- a/app/src/main/res/navigation/home_nav_graph.xml
+++ b/app/src/main/res/navigation/home_nav_graph.xml
@@ -19,8 +19,8 @@
     </fragment>
 
     <fragment android:id="@+id/loginRegisterFragment"
-              android:name="com.andorid.fudbox.view.authentication.LoginRegisterFragment"
-              android:label="fragment_loginregister" tools:layout="@layout/fragment_loginregister"/>
+              android:name="com.andorid.fudbox.view.authentication.AuthFragment"
+              android:label="fragment_loginregister" tools:layout="@layout/fragment_auth"/>
 
     <fragment android:id="@+id/nav_user" android:name="com.andorid.fudbox.view.mainscreen.user.UserFragment"
               android:label="fragment_user" tools:layout="@layout/fragment_user">
