--- a/app/src/main/res/values/order.xml
+++ b/app/src/main/res/values/order.xml
@@ -2,4 +2,12 @@
 <resources>
     <string name="completeOrder">Complete Order</string>
     <string name="history_order">Order composed by: %1$d dishes</string>
+    <string name="empty_field">"Field cannot be empty!"</string>
+    <string name="card_number">Insert card number</string>
+    <string name="name">Name</string>
+    <string name="surname">Surname</string>
+    <string name="cvc">CVC</string>
+    <string name="expire">Expiration Year</string>
+    <string name="complete_order">Pay with your card</string>
+    <string name="checkout">Proceed to checkout</string>
 </resources>
