--- a/app/src/main/res/values/place.xml
+++ b/app/src/main/res/values/place.xml
@@ -42,7 +42,7 @@
     <string name="autocomplete_address_heading_label" translatable="false">Delivery Address</string>
 
     <!-- Label for the address form's second address line field. -->
-    <string name="autocomplete_address2_label" translatable="false">Apartment, unit, suite, or floor #</string>
+    <string name="autocomplete_address2_label" translatable="false">Street number</string>
 
     <!-- Label for the address form's city field. -->
     <string name="autocomplete_city_label" translatable="false">City</string>
